--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </style>
 <script src=""></script>
 <body>
-
-<img src="img_la.jpg" alt="LA" style="width:100%">
-
-<div class="">
+ <div class="navbar"></div>
+<div class="main">
  <h1>Simple Editor</h1>
  <p>This is a paragraph.</p>
  <p>This is another paragraph.</p>
