--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <title>Simple Editor</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="/mainstyle.css">
+<link rel="stylesheet" href="styles/mainstyle.css">
 <style>
 </style>
 <script src=""></script>
