--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </style>
 <script src=""></script>
 <body>
- <div class="navbar"></div>
+ <div id="navbar"><div class="active_navoption">Home</div><div class="navoption">Projects</div></div>
 <div class="main">
  <h1>Simple Editor</h1>
  <p>This is a paragraph.</p>
