--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="styles/mainstyle.css">
 <style>
 </style>
-<script src=""></script>
+<script src="scripts/mainscript.js"></script>
 <body>
  <div id="navbar"><div class="active_navoption">Home</div><div class="navoption">Projects</div></div>
 <div class="main">
