--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </style>
 <script src="scripts/mainscript.js"></script>
 <body>
- <div id="navbar"><div class="active_navoption">Home</div><div class="navoption">Projects</div></div>
+ <div id="navbar"><div class="active_navoption">Home</div><div class="navoption">About</div></div>
 <div class="main">
- <h1>Simple Editor</h1>
+ <h1>Your Projects</h1>
  <p>This is a paragraph.</p>
  <p>This is another paragraph.</p>
 </div>
