--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@
 </style>
 <script src="scripts/mainscript.js"></script>
 <body>
- <div id="navbar"><div class="active_navoption"><a href="..">Home</a></div><div class="navoption">About</div></div>
+ <div id="navbar"><div class="navoption"><a href="..">Home</a></div><div class="active_navoption">About</div></div>
 <div class="main">
- <h1>Your Projects</h1>
- <p>This is a paragraph.</p>
+ <h1>About</h1>
+ <p>This was created for First Lego League</p>
  <p>This is another paragraph.</p>
 </div>
 
