--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </style>
 <script src="scripts/mainscript.js"></script>
 <body>
- <div id="navbar"><div class="active_navoption"></a>Home</div><div class="navoption"><a href="about.html">About</a></div></div>
+ <div id="navbar"><div class="active_navoption"></a>Home</div><a href="about.html"><div class="navoption">About</div></a></div>
 <div class="main">
  <h1>Your Projects</h1>
  <p>This is a paragraph.</p>
