--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </style>
 <script src="scripts/mainscript.js"></script>
 <body>
- <div id="navbar"><div class="navoption"><a href="..">Home</a></div><div class="active_navoption">About</div></div>
+ <div id="navbar"><a href="../simple-editor"><div class="navoption">Home</div></a><div class="active_navoption">About</div></div>
 <div class="main">
  <h1>About</h1>
  <p>This was created for First Lego League</p>
