--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 <title>Simple Editor</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="styles/mainstyle.css">
+<link rel="stylesheet" href="styles/about.css">
 <style>
 </style>
 <script src="scripts/mainscript.js"></script>
