--- a/editor.html
+++ b/editor.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="UTF-8">
+<title>Simple Editor</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="styles/mainstyle.css">
+<link rel="stylesheet" href="styles/about.css">
+<style>
+</style>
+<script src="scripts/mainscript.js"></script>
+<body>
+ <div id="navbar"><a href="../simple-editor" class="navoption"><div class="navoption">Home</div></a><a href="about.html"><div class="active_navoption">About</div></a></div>
+<div class="main">
+ <h1>About</h1>
+ <p>This was created for First Lego League</p>
+ <p>This is another paragraph.</p>
+</div>
 
+</body>
+</html>
