--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
  <div id="navbar"><div class="active_navoption"></a>Home</div><a href="about.html" class="navoption"><div class="navoption">About</div></a></div>
 <div class="main">
  <h1>Your Projects</h1>
- <p>This is a paragraph.</p>
- <p>This is another paragraph.</p>
+ <button><a href="editor.html">Create New</a></button>
 </div>
 
 </body>
