--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
  <div id="navbar"><div class="active_navoption"></a>Home</div><a href="about.html" class="navoption"><div class="navoption">About</div></a></div>
 <div class="main">
- <h1>Your Projects</h1>
- <button><a href="editor.html">Create New</a></button>
+<h1>Your Projects</h1>
+<a href="editor.html"><button>Create New</button></a>
 </div>
 
 </body>
