--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </style>
 <script src="scripts/mainscript.js"></script>
 <body>
- <div id="navbar"><div class="active_navoption"></a>Home</div><a href="about.html" class="navoption"><div class="navoption">About</div></a></div>
+ <div id="navbar"><div class="active_navoption"></a>Home</div><a href="about.html" class="navoption"><div class="navoption">About</div></a><a class="navoption" href="editor.html"><div class="navoption">Create</div></a></div>
 <div class="main">
 <h1>Your Projects</h1>
 <a href="editor.html"><button>Create New</button></a>
