--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </style>
 <script src="scripts/mainscript.js"></script>
 <body>
- <div id="navbar"><a href="../simple-editor" class="navoption"><div class="navoption">Home</div></a><div class="active_navoption">About</div></div>
+ <div id="navbar"><a href="../simple-editor" class="navoption"><div class="navoption">Home</div></a><div class="active_navoption">About</div><a class="navoption" href="editor.html"><div class="navoption">Create</div></a></div>
 <div class="main">
  <h1>About</h1>
  <p>This was created for First Lego League</p>
