--- a/editor.html
+++ b/editor.html
@@ -9,7 +9,7 @@
 </style>
 <script src="scripts/mainscript.js"></script>
 <body>
- <div id="navbar"><a href="../simple-editor" class="navoption"><div class="navoption">Home</div></a><a href="about.html"><div class="navoption">About</div></a><a class="active_navoption" href="editor.html"><div class="active_navoption">Create</div></a></div>
+ <div id="navbar"><a href="../simple-editor" class="navoption"><div class="navoption">Home</div></a><a href="about.html"><div class="navoption">About</div></a><a class="active_navoption"><div class="active_navoption">Create</div></a></div>
 <div class="main">
  <h1>About</h1>
  <p>This was created for First Lego League</p>
