--- a/create.html
+++ b/create.html
@@ -4,7 +4,7 @@
 <title>New Project</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="styles/mainstyle.css">
-<link rel="stylesheet" href="styles/about.css">
+<link rel="stylesheet" href="styles/create.css">
 <style>
 </style>
 <script src="scripts/mainscript.js"></script>
