--- a/create.html
+++ b/create.html
@@ -9,7 +9,7 @@
 </style>
 <script src="scripts/mainscript.js"></script>
 <body>
- <div id="navbar"><a href="../simple-editor" class="navoption"><div class="navoption">Home</div></a><div class="active_navoption">About</div><a class="active_navoption"><div class="navoption">Create</div></a></div>
+ <div id="navbar"><a href="../simple-editor" class="navoption"><div class="navoption">Home</div></a><a href="about.html" class="navoption"><div class="navoption">About</div></a><a class="active_navoption"><div class="navoption">Create</div></a></div>
 <div class="main">
  <h1>New Project</h1>
  <p>Select Project Type</p>
