--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <div id="navbar"><div class="active_navoption"></a>Home</div><a href="about.html" class="navoption"><div class="navoption">About</div></a><a class="navoption" href="create.html"><div class="navoption">Create</div></a></div>
 <div class="main">
 <h1>Your Projects</h1>
-<a href="editor.html"><button>Create New</button></a>
+<a href="create.html"><button>Create New</button></a>
 </div>
 
 </body>
