--- a/create.html
+++ b/create.html
@@ -13,10 +13,13 @@
 <div class="main">
  <h1>New Project</h1>
  <p>Select Project Type</p>
-<select>
-  <option disabled>Choose</option>
+<select placeholder="Select Language">
   <option>HTML, CSS, JS</option>
+  <option>Python</option>
 </select>
+ <a href="editor.html"><button>
+  Create
+ </button></a>
 </div>
 
 </body>
