--- a/editor.html
+++ b/editor.html
@@ -11,9 +11,9 @@
 <body>
  <div id="navbar"><a href="../simple-editor" class="navoption"><div class="navoption">Home</div></a><a href="about.html"><div class="navoption">About</div></a><a class="active_navoption"><div class="active_navoption">Create</div></a></div>
 <div class="main">
- <h1>About</h1>
- <p>This was created for First Lego League</p>
- <p>This is another paragraph.</p>
+ <h1>Editor</h1>
+ <p>coming soon</p>
+ <p>L</p>
 </div>
 
 </body>
